<resources>
    <string name="app_name">KetchAppn</string>
    <string name="next">next</string>
    <string name="title_activity_2">Activity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sted">Sted</string>
    <string name="signin">signIn</string>
    <string name="loginusername">loginUsername</string>
    <string name="hello_blank_fragment_minner">hello_blank_fragment_minner</string>
    <string name="tid">tid</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register_login">RegisterLoginAct</string>
    <string name="select_date">Select date</string>
    <string name="place">Place</string>
    <string name="textview1">TextView</string>
    <string name="inviter">Inviter</string>
    <string name="tilbake">Tilbake</string>
    <string name="register">Register</string>
    <string name="textview">TextView</string>
    <string name="welcome_to_ketchapp">Welcome to KetchApp</string>
    <string name="REGISTER">REGISTER</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="register1">Register</string>
    <string name="Login">Login?</string>
    <string name="pick_date">Pick date</string>
    <string name="who_will_you_invite">Who will you invite?</string>
    <string name="underline"><u>Who will you invite?</u>.</string>
    <string name="aktiviteter">Aktiviteter</string>
    <string name="content_change_password">endre passord</string>
    <string name="change_password">Endre passord</string>
    <string name="content_loggout">Logg av</string>
    <string name="logg_out">Logg ut?</string>
    <string name="back">BACK</string>
    <string name="changestatus">Endre status</string>
    <string name="name">name</string>
    <string name="symbol">symbol</string>
    <string name="tid_gruppe">tid</string>
    <string name="videre">Videre</string>
    <string name="login">Login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="legg_til_venner">legg til venner</string>
    <string name="backBtn">Back</string>
    <string name="send_message">Send message</string>
    <string name="minner">Minner</string>
    <string name="venner">Venner</string>
    <string name="aktivitet">Aktivitet</string>
    <string name="eventer">Eventer</string>
    <string name="Eventer">Eventer</string>
</resources>